<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/expense_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold|italic" android:textSize="36sp"/>
    <Button
            android:text="@string/n_e_w"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnNEw" app:layout_constraintEnd_toEndOf="@+id/btnSave"
            app:layout_constraintStart_toStartOf="@+id/btnSave" android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSave" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/expenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnEx" app:layout_constraintEnd_toEndOf="@+id/btnRes"
            app:layout_constraintStart_toStartOf="@+id/btnRes" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnRes"/>
    <Button
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave" app:layout_constraintEnd_toEndOf="@+id/btnEx"
            app:layout_constraintStart_toStartOf="@+id/btnEx" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnEx"/>
    <Button
            android:text="@string/reset_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnRes"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btnYes"/>
    <TextView
            android:text="@string/created_by_june_delmar_labitoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etItem"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etAmount" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="96dp"
            app:layout_constraintBottom_toTopOf="@+id/btnNEw" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etItem" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/etItem"/>
    <TextView
            android:text="@string/item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintEnd_toStartOf="@+id/etItem"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/etItem" app:layout_constraintBottom_toBottomOf="@+id/etItem"
            android:textStyle="bold" android:textAlignment="textEnd" android:textSize="30sp"/>
    <TextView
            android:text="@string/amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintEnd_toStartOf="@+id/etAmount"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/etAmount" app:layout_constraintBottom_toBottomOf="@+id/etAmount"
            android:textStyle="bold" android:textAlignment="textEnd" android:textSize="30sp"/>
    <Button
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnYes"
            app:layout_constraintBottom_toTopOf="@+id/textView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNo"
            app:layout_constraintBottom_toTopOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>